# nh2026-week1-project

./: .gitignore  README.md  analysis.ipynb  pyproject.toml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
src/: METHODS.md
src/data/: .gitignore  README.md
src/data/processed/: dimension_results.csv  leaderboard_R2.csv  leaderboard_r.csv
src/data/raw/: held_out_set_ids.txt
src/jupiter_notebooks/: README.md  pfactor_multimodal_prediction.ipynb
src/pipeline/: 01_fetch_data.py  01b_fetch_xcpd.py  02_build_features.py  03_train_compare.py  04_visualize.py  05_predict.py  README.md
src/projectlib/: __init__.py  dataio.py  features.py  models.py  plotting.py
src/results/: README.md  heldout_performance.csv  heldout_performance.json  heldout_performance.txt  heldout_predictions_all_targets.csv  pfactor_test_predictions.csv
