[project]
# If you use a library in the `src/` directory, make this the library's directory
# name (i.e., if the name is 'projectlib' then there should be a file
# `src/projectlib/__init__.py` in your repository.
name = "projectlib"
version = "0.1.0"
description = """Predicting the PNC p-factor from demographics, structural, and functional MRI (NeuroHackademy 2026 week-1 project)."""
authors = [{name="stijn van severen", email="stijn.vanseveren@gmail.com"}]
license = {"text"="MIT"}
readme = "README.md"
requires-python = ">=3.8"
# These can be optionally edited to specify what kind of library you have
# written.
keywords = ["cloud"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS']
# Any other libraries your library depends on should be listed here:
dependencies = [
     'cloudpathlib[s3,gs,azure] >= 0.18.0',
     'scikit-learn >= 1.3',
     'numpy',
     'pandas',
     'scipy',
     'matplotlib',
     'xgboost',
     'shap',
     'nilearn >= 0.10',
     'nibabel',
     'torch >= 2.2',
     'pyarrow',
     'joblib']
# rbclib is preinstalled on the NeuroHackademy Hub; off-Hub install it with:
#   pip install "git+https://github.com/Neurohackademy2026/rbclib"

[project.urls]
homepage = "https://github.com/stvsever/nh2026-week1-project"
repository = "https://github.com/stvsever/nh2026-week1-project"
